# payment_statistics

./: README.md  application.py  pyproject.toml
app/: db_config.py  enums.py
app/models/: company.py  user.py
app/routes/: company.py  healthcheck.py
app/schemas/: company.py  mock.py
migrations/: 20230721_init.sql  20230723_0001.sql
migrations/models/: 0_20230721104526_init.py  1_20230721104823_remove_company_email.py
utils/: OKVED_codes_and_descriptions.py  helpers.py  logger.py
